Refactor GamePanel: seperated rendering and input handler from game logic